batch api
